--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pexels-api",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://patel1643.github.io/Photo-Video-Search-App",
+  "homepage": "https://patel1643.github.io/Photo-Video-Search-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-hover-video-player": "^6.7.0",
+    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
@@ -23,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
