--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-bottom-scroll-listener": "^5.0.0",
     "react-dom": "^17.0.1",
     "react-hover-video-player": "^6.7.0",
     "react-particles-js": "^3.4.1",
